== 2.1.3

* Added a no conflic resolution for other libraries already using the "search" method. If you have a conflict, use "searchlogic".

== 2.1.2 released 2009-07-04

* Undefine the id method for the Search class, so that it acts like a condition.

== 2.1.1 released 2009-06-28

* Added inner_join convenience method.

== 2.1.0 released 2009-06-28

* Added a delete method to the Search class to allow the deleting of conditions off of the object.
* Add alias_scope feature, lets your create "named scopes" that represent a procedure of named scopes, while at the same time telling Searchlogic it is safe to use in the Search class.
* Use url_for as the default with form_for since rails does some magic to determine the url to use.
* Switched to using inner joins instead of left outer joins.

== 2.0.1 released 2009-06-20

* Allow the chaining of conditions off of a search object. Ex: search.username_like("bjohnson").age_gt(20).all
* Split out left outer join creation into its own method, allowing you to use it in your own named scopes.
* Make sure the search objects clone properly.
* named_scope_options should return the proper options for existing named scopes with an arity greater than 0

== 2.0.0

* Everything, completely rewritten.

== 1.6.6

* Fixed time zone issues when searching.

== 1.6.5 released 2009-04-2

* Skip all associations defined with the :finder_sql option, since conditions can not be chained to them, etc.
* Fixed bug when using non string values for the keywords condition.
* Fixed undefined methods link_options error.
* Return blank conditions when trying to scope blank conditions. Fixes the issue with groups that return a blank SQL string.
* Fixed issue with blank condition comparing boolean values to non boolean columns.
* Add utf-8 magic comment for ruby 1.9

== 1.6.4 released 2009-01-22

* Fixed calling attribute_condition with newer versions of rails.

== 1.6.3 released 2008-12-13
